Use Java 17 for compilation, updates of test dependencies, update license validation config